# icon

./: .gitignore  README.md  build.sh  check_code.sh  install.py  pyproject.toml
linux/: icon-0.1.0-py3-none-any.whl  icon-0.9.0-py3-none-any.whl  icon-0.9.1-py3-none-any.whl  icon-0.9.10-py3-none-any.whl  icon-0.9.8-py3-none-any.whl
src/icon/: icon_db.py  icon_gui.py
tests/: test_icon_db.py  test_icon_gui.py
